added comments added some more keybindings and options

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,30 @@
+# fancy 256 color terminal
 set -g default-terminal "screen-256color"
+
+# bind C-Space for tmux
 unbind C-b
 set -g prefix C-Space
 bind Space send-prefix
+
+# split window bindings
 bind | split-window -h
 bind - split-window -v
+
+# switching panes with vim-like bindings
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# resizing panes with vim-like bindings
+bind -r H resize-pane -L 10
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 10
+
+# renumber windows after closing one
+set -g renumber-window on
+
+# highlight windows on changes
+setw -g monitor-activity on
+setw -g visual-activity  on
