--- a/tmux.conf
+++ b/tmux.conf
@@ -6,21 +6,25 @@ unbind C-b
 set -g prefix C-Space
 bind Space send-prefix
 
-# split window bindings
-bind | split-window -h
-bind - split-window -v
-
 # switching panes with vim-like bindings
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+#bind h select-pane -L
+#bind j select-pane -D
+#bind k select-pane -U
+#bind l select-pane -R
+
+# smart pane switching with awareness of vim splits
+# got that from thoughtbot.com
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # resizing panes with vim-like bindings
-bind -r H resize-pane -L 10
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 10
+bind -n C-H resize-pane -L 5
+bind -n C-J resize-pane -D 5
+bind -n C-K resize-pane -U 5
+bind -n C-L resize-pane -R 5
 
 # renumber windows after closing one
 set -g renumber-window on
