--- a/tmux.conf
+++ b/tmux.conf
@@ -21,10 +21,10 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # resizing panes with vim-like bindings
-bind -n C-H resize-pane -L 5
-bind -n C-J resize-pane -D 5
-bind -n C-K resize-pane -U 5
-bind -n C-L resize-pane -R 5
+bind -r C-H resize-pane -L 2
+bind -r C-J resize-pane -D 1
+bind -r C-K resize-pane -U 1
+bind -r C-L resize-pane -R 2
 
 # renumber windows after closing one
 set -g renumber-window on
