--- a/tmux.conf
+++ b/tmux.conf
@@ -6,12 +6,6 @@ unbind C-b
 set -g prefix C-Space
 bind Space send-prefix
 
-# switching panes with vim-like bindings
-#bind h select-pane -L
-#bind j select-pane -D
-#bind k select-pane -U
-#bind l select-pane -R
-
 # smart pane switching with awareness of vim splits
 # got that from thoughtbot.com
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
@@ -30,5 +24,5 @@ bind -r C-L resize-pane -R 2
 set -g renumber-window on
 
 # highlight windows on changes
-setw -g monitor-activity on
+#setw -g monitor-activity on
 setw -g visual-activity  on
