--- a/tmux.conf
+++ b/tmux.conf
@@ -26,3 +26,28 @@ set -g renumber-window on
 # highlight windows on changes
 #setw -g monitor-activity on
 setw -g visual-activity  on
+
+set -g status-fg colour15 # white
+set -g status-bg colour16 # black
+
+set-window-option -g window-status-current-fg colour82 #green
+set-window-option -g window-status-current-bg default
+set-option -g status-attr default
+
+# pane border
+set-option -g pane-border-fg colour15        # white
+set-option -g pane-active-border-fg colour15 # white
+
+# message text
+set-option -g message-bg default
+set-option -g message-fg colour196 #red
+
+# pane number display
+set-option -g display-panes-active-colour colour200 #pink
+set-option -g display-panes-colour colour6 #cyan
+
+set -g status-left-length 20
+set -g status-left '[#[fg=red]#S#[default]]'
+
+setw -g window-status-current-format '#[fg=green][#I#F#W]#[default]'
+setw -g window-status-format '#I#F#W'
