--- a/tmux.conf
+++ b/tmux.conf
@@ -35,8 +35,8 @@ set-window-option -g window-status-current-bg default
 set-option -g status-attr default
 
 # pane border
-set-option -g pane-border-fg colour15        # white
-set-option -g pane-active-border-fg colour15 # white
+set-option -g pane-border-fg colour82        # green
+set-option -g pane-active-border-fg colour82 # green
 
 # message text
 set-option -g message-bg default
@@ -47,7 +47,7 @@ set-option -g display-panes-active-colour colour200 #pink
 set-option -g display-panes-colour colour6 #cyan
 
 set -g status-left-length 20
-set -g status-left '[#[fg=red]#S#[default]]'
+set -g status-left '[#[fg=colour14]#S#[default]]'
 
-setw -g window-status-current-format '#[fg=green][#I#F#W]#[default]'
+setw -g window-status-current-format '#[fg=colour82][#I#F#W]#[default]'
 setw -g window-status-format '#I#F#W'
