--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # fancy 256 color terminal
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 
 # bind C-Space for tmux
 unbind C-b
@@ -27,27 +27,27 @@ set -g renumber-window on
 #setw -g monitor-activity on
 setw -g visual-activity  on
 
-set -g status-fg colour15 # white
-set -g status-bg colour16 # black
+set -g status-fg colour7 # white
+set -g status-bg colour0 # black
 
-set-window-option -g window-status-current-fg colour10 #green
+set-window-option -g window-status-current-fg colour2 #green
 set-window-option -g window-status-current-bg default
 set-option -g status-attr default
 
 # pane border
-set-option -g pane-border-fg colour10        # green
-set-option -g pane-active-border-fg colour10 # green
+set-option -g pane-border-fg colour2        # green
+set-option -g pane-active-border-fg colour2 # green
 
 # message text
 set-option -g message-bg default
-set-option -g message-fg colour9 #red
+set-option -g message-fg colour1 #red
 
 # pane number display
-set-option -g display-panes-active-colour colour200 #pink
+set-option -g display-panes-active-colour colour5 #pink
 set-option -g display-panes-colour colour6 #cyan
 
 set -g status-left-length 20
-set -g status-left '[#[fg=colour14]#S#[default]]'
+set -g status-left '[#[fg=colour6]#S#[default]]'
 
-setw -g window-status-current-format '#[fg=colour10][#I#F#W]#[default]'
+setw -g window-status-current-format '#[fg=colour2][#I#F#W]#[default]'
 setw -g window-status-format '#I#F#W'
