--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # fancy 256 color terminal
-# set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 
 # bind C-Space for tmux
 unbind C-b
