removed unused files updated head on each file removed unused outcommented lines

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# file: ~/tmux.conf
+# author d4ryus https://github.com/d4ryus
+
 # fancy 256 color terminal
 set -g default-terminal "screen-256color"
 
