--- a/tmux.conf
+++ b/tmux.conf
@@ -5,9 +5,10 @@
 set -g default-terminal "screen-256color"
 
 # bind C-Space for tmux
-unbind C-b
 set -g prefix C-Space
-bind Space send-prefix
+unbind C-b
+
+set -sg escape-time 1
 
 # smart pane switching with awareness of vim splits
 # got that from thoughtbot.com
@@ -24,7 +25,6 @@ bind -r C-K resize-pane -U 1
 bind -r C-L resize-pane -R 2
 
 # highlight windows on changes
-#setw -g monitor-activity on
 setw -g visual-activity  on
 
 set -g status-fg colour7 # white
