changed statusline background color

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,7 @@
 
 # fancy 256 color terminal
 set -g default-terminal "screen-256color"
+set -g default-shell /bin/zsh
 
 # bind C-Space for tmux
 set -g prefix C-Space
@@ -51,3 +52,6 @@ set -g status-left '[#[fg=colour6]#S#[default]]'
 
 setw -g window-status-current-format '#[fg=colour2][#I#F#W]#[default]'
 setw -g window-status-format '#I#F#W'
+
+set -g status on
+set -g status-style "bg=colour233"
