added renumbering of windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,3 +53,5 @@ setw -g window-status-current-format '#[fg=colour2][#I#F#W]#[default]'
 setw -g window-status-format '#I#F#W'
 
 set -g status on
+
+set-option -g renumber-windows on
