replaced vundle -> Plug, updated listchars, gS
- replaced vundle with Plug as plugin manager
- updated listchars and showbreak characters.
- updated Split declaration function

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,7 @@ irssi/config
 mutt/cache
 mutt/my_mutt.gpg
 mutt/aliases
-vim/plugin
-vim/bundle
-vim/eclim
-vim/plugin
+vim/plugged
 vim/swap/*
 vim/undo/*
 vim/.netrwhist
