updated gitignore, removed unused config files

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,4 @@
-irssi/config
-mutt/cache
-mutt/my_mutt.gpg
-mutt/aliases
-vim/plugged
+vim/plugged/*
 vim/swap/*
-vim/undo/*
 vim/.netrwhist
-irssi/
-*.spl
-fluxbox/apps
-fluxbox/backgrounds
-fluxbox/fbrun_history
-fluxbox/icons
-fluxbox/init
-fluxbox/lastwallpaper
-fluxbox/menu
-fluxbox/menuconfig
-fluxbox/overlay
-fluxbox/pixmaps
-fluxbox/slitlist
-fluxbox/startup
-fluxbox/styles
-fluxbox/windowmenu
+vim/spell/*.spl
