i3: Add volume keys

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -129,3 +129,8 @@ bindsym $mod+y exec "i3lock --color=000000 -f"
 # Brightness keys
 bindsym XF86MonBrightnessUp exec "xbacklight -inc 10"
 bindsym XF86MonBrightnessDown exec "xbacklight -dec 10"
+
+# Volume keys
+bindsym XF86AudioRaiseVolume exec "amixer -q sset Master 5%+"
+bindsym XF86AudioLowerVolume exec "amixer -q sset Master 5%-"
+bindsym XF86AudioMute exec "amixer -q sset Master toggle"
