--- a/.config/i3/config
+++ b/.config/i3/config
@@ -134,3 +134,9 @@ bindsym XF86MonBrightnessDown exec "xbacklight -dec 10"
 bindsym XF86AudioRaiseVolume exec "amixer -q sset Master 5%+"
 bindsym XF86AudioLowerVolume exec "amixer -q sset Master 5%-"
 bindsym XF86AudioMute exec "amixer -q sset Master toggle"
+
+# Playback keys
+bindsym XF86AudioPlay exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause"
+bindsym XF86AudioNext exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next"
+bindsym XF86AudioPrev exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previsous"
+bindsym XF86AudioStop exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Stop"
