--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 set -g escape-time 0
 set -g display-panes-time 2000
 set -g automatic-rename on
-set -g default-terminal "rxvt-unicode-256color"
+set -g default-terminal "xterm-256color"
 set -g history-limit 1048576
 
 bind-key P command-prompt -p 'save history to filename:' -I '~/.tmux.history' 'capture-pane -S -65536 ; save-buffer %1 ; delete-buffer'
