--- a/.config/i3/config
+++ b/.config/i3/config
@@ -140,3 +140,5 @@ bindsym XF86AudioPlay exec "dbus-send --type=method_call --dest=org.mpris.MediaP
 bindsym XF86AudioNext exec "dbus-send --type=method_call --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next"
 bindsym XF86AudioPrev exec "dbus-send --type=method_call --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous"
 bindsym XF86AudioStop exec "dbus-send --type=method_call --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Stop"
+
+for_window [title=".* QjackCtl$"] floating enable
