--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".fonts/JetBrainsMono"]
-	path = .fonts/JetBrainsMono
+[submodule "git/JetBrainsMono"]
+	path = git/JetBrainsMono
 	url = https://github.com/JetBrains/JetBrainsMono
