i3: Start desktop-online.target after startup

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -153,4 +153,4 @@ for_window [title=".* QjackCtl$"] floating enable
 for_window [class="Spotify"] move to workspace "9:"
 for_window [class="firefox"] move to workspace "2:🌐"
 
-exec "dbus-send --session --dest=org.freedesktop.Notifications --print-reply /org/freedesktop/Notifications org.freedesktop.DBus.Peer.Ping"
+exec "systemctl --user start desktop-online.target"
