--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
 	unstage = reset HEAD --
 	df      = diff --cached
 	l       = log --all --graph --decorate --oneline
+        ru      = rebase -i @{u}
 [color]
 	status  = auto
 	branch  = auto
