--- a/.config/i3/config
+++ b/.config/i3/config
@@ -20,6 +20,10 @@ set $mod Mod4
 # is used in the bar {} block below.
 font pango: JetBrains Mono 9
 
+default_border normal 0
+hide_edge_borders smart
+for_window [class="Xfce4-terminal"] border normal 1
+for_window [class="Emacs"] border normal 1
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
